Create color variables and apply base color to body

--- a/src/styles/generic/_base.scss
+++ b/src/styles/generic/_base.scss
@@ -1,4 +1,11 @@
+@use "../settings/colors";
+
+:root {
+  @include colors.colors;
+}
+
 body {
+  color: var(--01);
   font-family: Montserrat, system-ui, "Segoe UI", Roboto, Helvetica, Arial,
     sans-serif, "Apple Color Emoji", "Segoe UI Emoji";
 }
