Create Heading component

--- a/src/styles/generic/_base.scss
+++ b/src/styles/generic/_base.scss
@@ -9,3 +9,9 @@ body {
   font-family: Montserrat, system-ui, "Segoe UI", Roboto, Helvetica, Arial,
     sans-serif, "Apple Color Emoji", "Segoe UI Emoji";
 }
+
+h1,
+h2,
+h3 {
+  line-height: normal;
+}
