--- a/src/styles/generic/_base.scss
+++ b/src/styles/generic/_base.scss
@@ -15,3 +15,13 @@ h2,
 h3 {
   line-height: normal;
 }
+
+a {
+  color: inherit;
+  text-decoration: none;
+}
+
+ul {
+  list-style: none;
+  padding-left: 0;
+}
