Rename $media_1920 variable and refactor transition property

--- a/src/components/Footer/Footer.module.scss
+++ b/src/components/Footer/Footer.module.scss
@@ -20,8 +20,7 @@
   }
 
   a {
-    transition-property: color;
-    transition-duration: 250ms;
+    color: var(--02);
 
     @media (hover: hover) {
       &:hover {
@@ -30,7 +29,7 @@
     }
   }
 
-  @include media.from(#{breakpoint.$media_1920}) {
+  @include media.from(#{breakpoint.$media_desktop}) {
     &__wrap {
       flex-direction: row;
       gap: rem.rem(80);
@@ -42,7 +41,7 @@
 .logo {
   align-self: center;
 
-  @include media.from(#{breakpoint.$media_1920}) {
+  @include media.from(#{breakpoint.$media_desktop}) {
     align-self: start;
   }
 }
@@ -53,7 +52,7 @@
   grid-template-columns: repeat(2, minmax(0, 1fr));
   gap: rem.rem(24);
 
-  @include media.from(#{breakpoint.$media_1920}) {
+  @include media.from(#{breakpoint.$media_desktop}) {
     display: flex;
     gap: rem.rem(16);
   }
@@ -68,7 +67,7 @@
     grid-column: span 2;
   }
 
-  @include media.from(#{breakpoint.$media_1920}) {
+  @include media.from(#{breakpoint.$media_desktop}) {
     flex: 1 0 0;
 
     &--special {
