--- a/src/components/Tag/Tag.module.scss
+++ b/src/components/Tag/Tag.module.scss
@@ -8,9 +8,8 @@
   font-weight: 700;
   padding: rem.rem(6) rem.rem(14);
   text-transform: uppercase;
-  transition-property: color, background-color;
+  transition-property: background-color, color;
   line-height: 125%;
-  transition-duration: 250ms;
 
   @media (hover: hover) {
     &:hover {
