Create Section component

--- a/src/components/Main/Main.module.scss
+++ b/src/components/Main/Main.module.scss
@@ -1,3 +1,7 @@
+@use "../../styles/tools/rem";
+
 .main {
+  margin-inline: auto;
+  max-width: rem.rem(1440);
   min-height: calc(100dvh - 80px);
 }
