Fix image aspect

--- a/src/components/Section/Section.module.scss
+++ b/src/components/Section/Section.module.scss
@@ -17,6 +17,10 @@
         margin-top: rem.rem(32);
       }
     }
+
+    > img {
+      height: auto;
+    }
   }
 
   @include media.from(#{breakpoint.$media_desktop}) {
