--- a/src/styles/tools/_rem.scss
+++ b/src/styles/tools/_rem.scss
@@ -1,5 +1,5 @@
 @function rem($value) {
-  /* $remValue: calc($value / 16) + rem;
-  @return $remValue; */
-  @return $value + px;
+  $remValue: calc($value / 16) + rem;
+  @return $remValue;
+  //@return $value + px;
 }
