Replace hardcoded number with css variable

--- a/src/components/Main/Main.module.scss
+++ b/src/components/Main/Main.module.scss
@@ -3,5 +3,5 @@
 .main {
   margin-inline: auto;
   max-width: rem.rem(1440);
-  min-height: calc(100dvh - 80px);
+  min-height: calc(100dvh - var(--header-height));
 }
